Updates MJS Definition scheme

--- a/site/ViewPoint/index.html
+++ b/site/ViewPoint/index.html
@@ -6,10 +6,10 @@
   <title>Virtual World ViewPoint</title>
   <script type="module">
 
-    import mod_EntityManager from "../modules/EntityManager.mjs";
-    import mod_PlanetModel from "../modules/PlanetModel.mjs";
-    import mod_PlanetRenderer from "../modules/PlanetRenderer.mjs";
-    import mod_GamePad from "https://wlee0515.github.io/site/modules/GamePad.mjs";
+    import * as mod_EntityManager from "../modules/EntityManager.mjs";
+    import * as mod_PlanetModel from "../modules/PlanetModel.mjs";
+    import * as mod_PlanetRenderer from "../modules/PlanetRenderer.mjs";
+    import * as mod_GamePad from "https://wlee0515.github.io/site/modules/GamePad.mjs";
     import * as mod_WebRTI from "https://webrti.herokuapp.com/script/javascript/WebRTI.mjs";
 
     const gDegToRad = Math.PI / 180;
