--- a/site/ViewPoint/index.html
+++ b/site/ViewPoint/index.html
@@ -83,6 +83,10 @@
         , gGlobal.Ownship.eulerAngle[2]
       );
 
+      clearLog();
+      log("Time Step : " + iDt + "s");
+      log("Ownship Position : " + gGlobal.Ownship.location);
+      log("Ownship Euler Angles : " + gGlobal.Ownship.eulerAngle);
     }
 
     function log(iLog) {
@@ -167,7 +171,7 @@
   #id_OutputCanvasContainer {
     width: 100vw;
     height: 100vh;
-    z-index: 100;
+    z-index: 0;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -186,6 +190,8 @@
     resize: both;
     overflow: auto;
     min-width: 300px;
+    min-height: 75px;
+    z-index: 1;
   }
 </style>
 
